prevent user-select when holding finger down on iOS devices

--- a/css/default.css
+++ b/css/default.css
@@ -7,7 +7,9 @@ html, body {
 	margin: 0px;
 	overflow: hidden;
 	touch-action: none;
-	cursor: default; 
+	cursor: default;
+	user-select: none;
+	-webkit-user-select: none;
 }
 
 #info {
